Week3/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-demo
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: gateway-demo
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "app.local"
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: gateway-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      hostAliases:
      - ip: "172.18.0.9" # update node IP here
        hostnames:
        - "app.local"
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
          - "-text=Web Service Pod: $(POD_NAME)"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: gateway-demo
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-app
  namespace: gateway-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      hostAliases:
      - ip: "172.18.0.9" # update node IP here
        hostnames:
        - "app.local"
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
          - "-text=Video Service Pod: $(POD_NAME)"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
  namespace: gateway-demo
spec:
  selector:
    app: video
  ports:
  - port: 80
    targetPort: 5678
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: gateway-demo
spec:
  parentRefs:
  - name: demo-gateway
  hostnames:
  - "app.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /video
    backendRefs:
    - name: video-service
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web-service
      port: 80
